Fixed uncentered header on narrow screens

--- a/less/responsiveness.less
+++ b/less/responsiveness.less
@@ -10,6 +10,12 @@
 				display:block;
 			}
 		}
+
+		h1,
+		ul li
+		{
+			margin-right: 0;
+		}
 	}
 	#debug-link
 	{
